cetoniujo-k8s/akrido-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: akrido
  name: akrido
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    cmp: akrido
status:
  loadBalancer: {}
